--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,16 @@ button.primary-btn {
     display: block; }
 
 .sidebar {
-  font-weight: 400; }
+  font-weight: 400;
+  left: -300px;
+  position: fixed;
+  transition: all .3s; }
   .sidebar a {
     color: #fdfdfd;
     text-decoration: none; }
+  .sidebar .m-level-2 a:active, .sidebar .m-level-2 a:hover, .sidebar .m-level-2 a:focus {
+    color: #3975c3;
+    font-weight: bold; }
   .sidebar .logo {
     background: #222222;
     text-align: center; }
@@ -56,16 +62,21 @@ button.primary-btn {
     background: #222222;
     display: block;
     height: 100%;
-    position: absolute;
     top: 0;
     transition: .3s all;
     width: calc(100vw - 80px);
     z-index: 4;
+    left: 0;
     -webkit-box-shadow: 5px 0px 5px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 5px 0px 5px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 5px 0px 5px 0px rgba(0, 0, 0, 0.75); }
     .sidebar.mobile-active .logo {
       display: none; }
+  @media (min-width: 768px) {
+    .sidebar {
+      display: block;
+      left: 0;
+      position: relative; } }
 
 .sidebar__nav-item {
   padding: 1.3rem 1rem;
@@ -100,23 +111,38 @@ button.primary-btn {
 
 .nav-menu__item {
   border-bottom: 1px #555555 solid;
-  font-size: 1.2rem; }
+  font-size: 1.2rem;
+  position: relative; }
   .nav-menu__item a {
     display: block;
     padding: 1.5rem; }
-    .nav-menu__item a:active, .nav-menu__item a:hover, .nav-menu__item a:focus {
-      color: #3975c3; }
   .nav-menu__item i {
     margin-right: 0.7rem; }
   .nav-menu__item .m-level-2 {
     border-bottom: none;
-    font-weight: 300; }
+    display: none;
+    font-weight: 300;
+    transition: all .4s; }
+
+.m-parent::after {
+  color: #fdfdfd;
+  content: "\f078";
+  font-family: FontAwesome;
+  position: absolute;
+  right: 1rem;
+  top: 1.6rem;
+  transition: all .4s; }
+.m-parent.nav-menu__item--opened::after {
+  display: block;
+  transform: rotate(180deg); }
 
 .nav-menu__sub li:first-child a {
   padding: 0.5rem 1.5rem; }
 
 .nav-menu__item--opened {
   background: #0f0f0f; }
+  .nav-menu__item--opened .m-level-2 {
+    display: block; }
 
 .content-card__img img {
   border-radius: 0.5rem 0.5rem 0 0;
@@ -209,11 +235,6 @@ body {
   color: #fdfdfd;
   font-family: 'Poppins', sans-serif; }
 
-.sidebar {
-  display: none;
-  /*float: left;
-  width: 20%;*/ }
-
 main {
   background: #0f0f0f;
   /*float: left;
@@ -261,9 +282,9 @@ main {
   position: absolute;
   padding: 0.3rem 0 0.3rem 0.3rem;
   left: 1rem; }
-  .search-bar:active, .search-bar:focus {
+  .search-bar.active, .search-bar.focus {
     width: calc(100% - 38px); }
-    .search-bar:active .search-bar__field, .search-bar:focus .search-bar__field {
+    .search-bar.active .search-bar__field, .search-bar.focus .search-bar__field {
       width: 100%; }
   .search-bar form {
     align-items: center;
