--- a/css/_card.scss
+++ b/css/_card.scss
@@ -10,6 +10,23 @@
   &:nth-child(2n) {
     padding-right: 0;
     padding-left: 0.5rem;
+
+    @media (min-width: 768px) {
+      padding-right: 1rem;
+      padding-left: 0;
+    }
+  }
+
+  &:nth-child(4n) {
+    @media (min-width: 768px) {
+      padding-right: 0;
+    }
+  }
+
+  @media (min-width: 768px) {
+    width: 25%;
+    flex: 0 25%;
+    padding-right: 1rem;
   }
 }
 
@@ -18,6 +35,10 @@
     border-radius: 0.5rem 0.5rem 0 0;
     width: 100%;
     height: 100%;
+
+    @media (min-width: 768px) {
+      border-radius: 0.3rem 0.3rem 0 0;
+    }
   }
 }
 
@@ -27,9 +48,20 @@
   border-radius: 0 0 0.5rem 0.5rem;
   width: 100%;
 
+  @media (min-width: 768px) {
+    border-radius: 0 0 0.3rem 0.3rem;
+    padding-top: 1rem;
+  }
+
   .content-card__label {
+    color: $secondary-active;
     display: none;
-    padding: 0 0.7rem 1rem 0.7rem;
+    font-size: 0.7rem;
+    padding: 0 0.7rem 0.2rem;
+
+    @media (min-width: 768px) {
+      display: block;
+    }
   }
 }
 
@@ -38,6 +70,11 @@
   text-transform: uppercase;
   overflow-wrap: break-word;
   padding: 0 0.7rem;
+
+  @media (min-width: 768px) {
+    font-size: 0.75rem;
+    margin: 0 0 1rem;
+  }
 }
 
 .content-card__description {
@@ -47,6 +84,11 @@
   word-wrap: break-word;
   max-height: 4.8em;
   line-height: 1.2em;
+
+  @media (min-width: 768px) {
+    font-size: 0.7rem;
+    max-height: 2.5em;
+  }
 }
 
 .content-card__options {
@@ -58,19 +100,24 @@
   display: flex;
   margin-top: 1rem;
   padding: 1rem 0.3rem;
+  position: relative;
   width: 100%;
+
+  @media (min-width: 768px) {
+    padding: 1rem;
+  }
 
   a {
     background: $border;
     border-radius: 2rem;
     color: $text;
-    text-align: center;
-    text-transform: uppercase;
+    flex: 1 0 0%;
+    font-size: 0.9rem;
     margin-right: 0.6rem;
     padding: 0.3rem 0.6rem;
-    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
     text-decoration: none;
-    flex: 1 0 0%;
 
     &:last-child {
       margin-right: 0;
@@ -79,12 +126,28 @@
     &:hover {
       background: $secondary-active;
     }
+
+    @media (min-width: 768px) {
+      font-size: 0.7rem;
+      flex: 0;
+      padding: 0.3rem 1rem;
+    }
   }
 
   .content-card__edit {
     background: transparent;
     flex: 0 20px;
     padding: 0;
+
+    @media (min-width: 768px) {
+      position: absolute;
+      right: 1rem;
+    }
+
+    &:hover {
+      background: transparent;
+      color: $cta;
+    }
   }
 }
 
