--- a/css/dashboard.scss
+++ b/css/dashboard.scss
@@ -5,17 +5,47 @@
 
 body {
   color: $text;
-  font-family: 'Poppins', sans-serif;
+
+  @media (min-width: 768px) {
+    display: flex;
+    flex-flow: row wrap;
+  }
 }
 
 main {
   background: $global-background;
-  /*float: left;
-  width: 80%;*/
+  @media (min-width: 768px) {
+    flex: 1
+  }
+}
+
+footer {
+  background: $element-background;
+  font-size: 0.7rem;
+  padding: 0.5rem 1rem;
+
+  @media (min-width: 768px) {
+    flex: 1 100%;
+  }
 }
 
 .header__top {
+  background: $primary;
   display: none;
+  justify-content: space-between;
+  padding: 1rem;
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
+
+  div[class^="btn-"] {
+    cursor: pointer;
+  }
+
+  .btn-collapse {
+    color: $cta;
+  }
 }
 
 .dashboard-body {
@@ -24,6 +54,11 @@ main {
 
   h1, h2 {
     padding: 0 1rem;
+  }
+
+  @media (min-width: 768px) {
+    margin-top: 0;
+    padding: 1rem;
   }
 }
 
@@ -45,6 +80,13 @@ main {
   position: fixed;
   width: 100%;
   z-index: 2;
+
+  @media (min-width: 768px) {
+    background: transparent;
+    border-top: none;
+    margin-top: 1rem;
+    position: relative;
+  }
 }
 
 .ctn-options__button {
@@ -65,6 +107,12 @@ main {
   padding: 0.3rem 0 0.3rem 0.3rem;
   left: 1rem;
 
+  @media (min-width: 768px) {
+    width: 15rem;
+    border-radius: 0.2rem;
+    padding: 0.4rem;
+  }
+
   &.active, &.focus {
     width: calc(100% - 38px);
 
@@ -82,6 +130,11 @@ main {
     color: $border;
     font-size: 1.4rem;
     margin-right: 0.4rem;
+
+    @media (min-width: 768px) {
+      font-size: 1rem;
+      color: $text;
+    }
   }
 
   .search-bar__field {
@@ -93,6 +146,11 @@ main {
     padding: 0;
     width: 0;
     transition: all 0.5s;
+
+    @media (min-width: 768px) {
+      font-size: 0.8rem;
+      width: 100%;
+    }
   }
 }
 
@@ -100,6 +158,10 @@ main {
   display: flex;
   flex-wrap: wrap;
   margin-top: 1.5rem;
+
+  @media (min-width: 768px) {
+    padding: 0 1rem;
+  }
 }
 
 .change-view-mode {
