--- a/css/global.scss
+++ b/css/global.scss
@@ -1,9 +1,17 @@
 @import 'colors';
 
+html, body {
+  font-family: 'Poppins', sans-serif;
+}
+
 h1 {
   font-size: 1.3rem;
   font-weight: normal;
   margin: 0.3rem 0 0;
+
+  @media (min-width: 768px) {
+    font-size: 1.2rem;
+  }
 }
 
 h2 {
@@ -11,6 +19,14 @@ h2 {
   font-size: 1.1rem;
   font-weight: normal;
   margin: 0 0 0.3rem;
+
+  @media (min-width: 768px) {
+    font-size: 1rem;
+  }
+}
+
+button {
+  cursor: pointer;
 }
 
 button.primary-btn {
@@ -18,6 +34,15 @@ button.primary-btn {
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
+  
+  @media (min-width: 768px) {
+    font-size: 0.7rem;
+    letter-spacing: 0.5px;
+  }
+}
+
+a {
+  transition: all .3s;
 }
 
 .overlay {
