--- a/css/_card.scss
+++ b/css/_card.scss
@@ -1,3 +1,5 @@
+@import 'colors';
+
 .content-card {
   box-sizing: border-box;
   display: flex;
@@ -156,9 +158,13 @@
     border-radius: 0.5rem;
     margin-bottom: 1.5rem;
     width: 100%;
-    flex: 1;
+    flex: 1 0 100%;
     flex-wrap: nowrap;
     padding-right: 0;
+
+    @media (min-width: 768px) {
+      flex: 1 0 100%;
+    }
 
     &:nth-child(2n) {
       padding-left: 0;
