--- a/css/global.scss
+++ b/css/global.scss
@@ -1,5 +1,3 @@
-@import 'colors';
-
 html, body {
   font-family: 'Poppins', sans-serif;
 }
@@ -41,7 +39,7 @@ button.primary-btn {
   }
 }
 
-a {
+a, button {
   transition: all .3s;
 }
 
